[metadata]
name = klaviyo-api
version = 17.0.0
author = Klaviyo Developers
author_email = developers@klaviyo.com
description = Klaviyo Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klaviyo/klaviyo-api-python
project_urls =
    API Docs = https://developers.klaviyo.com/en/reference/api_overview
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.6
install_requires =
    python_dateutil >= 2.5.3
    setuptools >= 21.0.0
    urllib3 >= 1.25.3
    pydantic >= 2
    aenum >= 3.1.11
[options.packages.find]
where = src

[flake8]
max-line-length=99
